<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.album_detail.AlbumDetailFragment"
    android:id="@+id/album_detail_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/detail_title"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="10dp"
            android:background="@color/purple_500"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textProfile"
                android:layout_width="wrap_content"
                android:maxWidth="300dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBack"
                    android:layout_width="50dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@color/purple_500"
                    android:text="@string/x"
                    android:textColor="@color/teal_700"
                    android:textSize="28sp"
                    app:backgroundTint="@color/purple_500" />
            </RelativeLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/album_detail_image"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:contentDescription="@string/album_cover_desc"
            android:scaleType="centerCrop"
            app:layout_constraintTop_toBottomOf="@+id/detail_title"
            tools:layout_editor_absoluteX="0dp"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/album_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_detail_image"
            tools:text="Rock" />

        <TextView
            android:id="@+id/album_detail_performers_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_detail_name"
            tools:text="@string/album_detail_artists_title" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/performerDetailRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_detail_performers_title"
            tools:listitem="@layout/performer_item"/>

        <LinearLayout
            android:id="@+id/block_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/performerDetailRv">
            <TextView
                android:id="@+id/album_detail_tracks_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.23"
                android:layout_marginStart="5dp"
                android:layout_marginTop="15dp"
                android:textSize="23sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="@string/album_detail_tracks_title" />

            <Button
                android:id="@+id/btnGoToAddTrackFromAlbum"
                style="Theme.MaterialComponents.DayNight.DarkActionBar"
                android:contentDescription="@string/add_track_to_album"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_weight="0.88"
                android:drawableLeft="@drawable/add_circle_24dp_fill0_wght400_grad0_opsz24"
                android:drawableTint="@color/white"
                android:backgroundTint="@color/teal_600"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:padding="10dp"
                android:textSize="19sp"
                android:tooltipText="Add track"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackDetailRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/block_track"
            tools:listitem="@layout/track_item"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
