<resources>
    <string name="app_name">App Vinilos</string>
    <string name="view_artist_albums">View Albums</string>
    <string name="album_title">Albums</string>
    <string name="album_detail">Album Detail</string>
    <string name="artist_detail">Artist Detail</string>
    <string name="artist_title">Artists</string>
    <string name="collector_title">Collectors</string>
    <string name="album_detail_artists_title">Artists:</string>
    <string name="album_detail_tracks_title">Tracks:</string>
    <string name="album_cover_desc">Album\'s cover</string>
    <string name="collector_album_cover_desc">Collector Albums\'s cover</string>
    <string name="element_text">performer</string>
    <string name="track_text">Track item</string>
    <string name="element_text_track">track</string>
    <string name="element_text_duration">duration</string>
    <string name="visitor_login">Visitor</string>
    <string name="collector_login">Collector</string>
    <string name="exit">Exit</string>
    <string name="profile">Profile</string>
    <string name="vinilos">Vinilos</string>
    <string name="artist_detail_placeholder">Here comes the description of this good band</string>
    <string name="add_track">Add track</string>
    <string name="add_album">Add album</string>
...
