<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.collector_detail.CollectorDetailFragment"
    android:id="@+id/collector_detail_layout">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:id="@+id/collector_album_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent"
            android:paddingLeft="10dp"
            android:background="@color/purple_500"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/textCollectorAlbumGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Title"
                android:lines="1"
                android:ellipsize="end"
                android:textColor="@color/teal_700"
                android:textSize="20sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:autoSizeMaxTextSize="100sp"
                    android:autoSizeMinTextSize="12sp"
                    android:autoSizeStepGranularity="2sp"
                    android:autoSizeTextType="uniform"
                    android:background="@color/purple_500"
                    android:text="@string/x"
                    android:textColor="@color/teal_700"
                    android:textSize="28sp"
                    app:backgroundTint="@color/purple_500" />
            </RelativeLayout>

        </LinearLayout>


        <RelativeLayout
            android:id="@+id/containerImageArtist"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            app:layout_constraintTop_toBottomOf="@+id/collector_album_title">

            <ImageView
                android:id="@+id/collector_album_image"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:contentDescription="@string/collector_album_cover_desc"
                android:scaleType="centerCrop"
                tools:layout_editor_absoluteX="0dp"
                tools:srcCompat="@tools:sample/avatars" />

            <TextView
                android:id="@+id/collector_detail_name"
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="25dp"
                android:layout_marginBottom="15dp"
                android:autoSizeMaxTextSize="100sp"
                android:autoSizeMinTextSize="38sp"
                android:autoSizeStepGranularity="2sp"
                android:autoSizeTextType="uniform"
                android:shadowColor="@color/black"
                android:shadowDx="1"
                android:shadowDy="2"
                android:shadowRadius="1"
                android:textColor="@color/white"
                android:textStyle="bold"
                tools:text="Collector Name" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/collectorAlbumsRv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="55dp"
            android:paddingTop="25dp"
            app:layout_constraintTop_toBottomOf="@+id/containerImageArtist"
            tools:listitem="@layout/collector_album_item"
            android:clickable="false"
            android:contextClickable="false"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreateAlbum"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_album_btn"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:textAlignment="center"
            android:maxLines="2"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collectorAlbumsRv" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddTrack"
            android:layout_width="130sp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="32dp"
            android:text="@string/add_track_btn"
            android:autoSizeTextType="uniform"
            android:autoSizeMinTextSize="12sp"
            android:autoSizeMaxTextSize="100sp"
            android:autoSizeStepGranularity="2sp"
            android:textAlignment="center"
            android:maxLines="2"
            android:textColor="@color/white"
            app:backgroundTint="@color/teal_700"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/collectorAlbumsRv" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
